# gbsd

./: .gitignore  Cargo.toml  EXECUTIVE_SUMMARY.md  FILE_INVENTORY.md  FILE_MANIFEST_PHASE2.md  GBSD–Full_Project_Structure_(ASCII).md  GITHUB_WORKFLOW_SETUP.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  ISSUES.md  PHASE1_COMPLETE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_PROGRESS.md  PHASE2_SPECIFICATION.md  PHASE2_TESTING_PLAN.md  PHASE3_PROGRESS.md  PHASE3_SPECIFICATION.md  PROFESSIONAL_REVIEW_INDEX.md  PROJECT_STATUS_PHASE3.md  QUICKSTART.md  QUICK_START_GITHUB_IMPORT.md  README.md  REVIEW_SUMMARY.md  SECURITY_AUDIT_REPORT.md  TESTING_DOCUMENTATION_INDEX.md  TESTING_VERIFICATION_COMPLETE.md  VERIFICATION_REPORT.md  build.py  build.sh  linker.ld  verify.sh
.github/workflows/: build.yml  docs.yml  security.yml
docs/: ANALYSIS_AND_SOLUTIONS.md  ARCHITECTURE_GUIDE.md  IMPLEMENTATION_GUIDE.md  INDEX.md  README.md  SOLUTIONS_AND_RECOMMENDATIONS.md
kernel/: Cargo.toml
kernel/src/: error.rs  error_tests.rs  globals.rs  ipc.rs  ipc_tests.rs  lib.rs  main.rs  memory.rs  syscall.rs  task.rs
kernel/src/allocator/: bump.rs
kernel/src/arch/: mod.rs
kernel/src/arch/arm64/: mod.rs
kernel/src/arch/x86_64/: idt.rs  mod.rs  syscall_entry.S
libgbsd/: Cargo.toml
libgbsd/src/: lib.rs
servers/ext4_server/: Cargo.toml
servers/ext4_server/src/: main.rs
servers/init_server/: Cargo.toml
servers/init_server/src/: main.rs
servers/log_server/: Cargo.toml
servers/netstack_server/: Cargo.toml
servers/scheduler_server/: Cargo.toml
servers/vfs_server/: Cargo.toml
(+4 files in other folders)
