# kernel/Cargo.toml
[package]
name = "kernel"
version = "0.1.0"
authors = ["Cartesian School Siergej Sobolewski <s.sobolewski@hotmail.com>"]
edition = "2021"
description = "GBSD microkernel (minimal kernel crate)"
license = "BSD-3-Clause"
publish = false

# We build the kernel as a binary (not a library).
[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

# Minimal dependencies — these are intentionally small and version-pinned.
[dependencies]
bootloader = { version = "0.9", features = ["map-physical-memory"] }
multiboot2 = "0.15"
pic8259 = "0.2"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"
x86_64 = "0.14.7"
spin = "0.9.2"
volatile = "0.4.4"
uart_16550 = "0.2.14"

[dependencies.log]
version = "0.4"
default-features = false

[features]
default = []

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
